adjusted links to my pages

--- a/views/about.html
+++ b/views/about.html
@@ -14,7 +14,7 @@
         </ul>
     </p>
     <p>
-        Check out my other stuff <a href="https://dl.dropboxusercontent.com/u/48838856/web/index.html">over here</a>.
+        Check out my other stuff <a href="http://mithyb.github.io/me">over here</a>.
     </p>
 
     <a href="#/" class="btn btn-primary">Back to the frontpage</a>
